Final_results/seq2seq2/python/2020-01-31_23-55-33/sourcemeter/log/PANTask.log
[2020-01-31 23:55:33] Start:PANTask
PAN 8.2.0 (build 8717#45192 Win64) - (C) 2001-2016 FrontEndART Ltd.
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\__init__.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\cornell_dataset_reader.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\csv_dataset_reader.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dailydialog_dataset_reader.py
  File "F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dailydialog_dataset_reader.py", line 41
SyntaxError: Non-ASCII character '\xe2' in file F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dailydialog_dataset_reader.py on line 41, but no encoding declared; see http://python.org/dev/peps/pep-0263/ for details
ERROR: Parser error.
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dataset_reader.py
  File "F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dataset_reader.py", line 260
    model_dir,
            ^
SyntaxError: invalid syntax
ERROR: Parser error.
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\dataset_readers\dataset_reader_factory.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\speech_to_text\__init__.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\speech_to_text\speech_to_text.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\__init__.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\audio_profile.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\list_voices.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\synthesize_file.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\synthesize_text.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\text_to_speech\text_to_speech.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\__init__.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\checkpoint_vocabulary_importer.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\dependency_based_vocabulary_importer.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\flatfile_vocabulary_importer.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\nnlm_en_vocabulary_importer.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\vocabulary_importer.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\vocabulary_importer_factory.py
Parsing file: F:\Facultate -- Master 1\Metrici software -  Final project\vocabulary_importers\word2vec_wikipedia_vocabulary_importer.py
Saving ASG file: "F:\Facultate -- Master 1\Metrici software si inginerie calitatii\SourceMeter-8.2.0-x64-windows\SourceMeter-8.2.0-x64-windows\Python\Final_results\seq2seq2\python\2020-01-31_23-55-33\sourcemeter\asg\seq2seq2.psi"

Statistics:
	Parsing time                 :       0.05s
	Saving asg time              :       0.00s
	Dumping pml time             :       0.00s
	Total time                   :       0.07s
	Peak memory usage            :          8MB
	Number of parser errors      :          2

[2020-01-31 23:55:35] End:PANTask Result:OK
